Fix spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,6 +52,5 @@ a:hover {
 
 .big-row {
   min-height: 100vh;
-  max-height: 100vh;
   padding: 0;
 }
